--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^4.0.12"
   },
   "peerDependencies": {
+    "lodash-es": "^4.17.21",
     "vue": "^3.2.26"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@vitejs/plugin-vue-jsx": "^1.3.3",
     "@vue/compiler-sfc": "^3.2.26",
     "acorn-jsx": "^5.3.2",
+    "lodash-es": "^4.17.21",
     "postcss-nested": "^5.0.5",
     "postcss-prefixer": "^2.1.2",
     "rollup": "^2.62.0",
