chore: 🔧 adjust example

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -17,7 +17,7 @@
     "module": "esnext",
     "target": "es6",
     "paths": {
-      "@/*": ["./example/*"],
+      "@/example/*": ["./example/*"],
       "@/comps/*": ["./src/*"]
     }
   }
